<resources>
    <string name="app_name">Calculator App</string>
    <string name="edit_text_num">Enter number</string>
    <string name="Button_one">1</string>
    <string name="button_four">4</string>
    <string name="button_three">3</string>
    <string name="button_two">2</string>
    <string name="button_del">/</string>
    <string name="btn_six">6</string>
    <string name="btn_plus">+</string>
    <string name="btn_five">5</string>
    <string name="btn_four">4</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_minus">-</string>
    <string name="btn_equal">=</string>
    <string name="btn_dot">.</string>
    <string name="btn_zero">0</string>
    <string name="btn_c">C</string>
</resources>