<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/edit_text_num"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:text="@string/Button_one"
                android:onClick="operationFunction"
                android:id="@+id/btn_one"
                style="@style/button_style" />

            <Button
                style="@style/button_style"
                android:id="@+id/btn_two"
                android:onClick="operationFunction"
                android:text="@string/button_two" />


            <Button
                style="@style/button_style"
                android:id="@+id/btn_three"
                android:onClick="operationFunction"
                android:text="@string/button_three" />

            <Button
                style="@style/button_style"
                android:id="@+id/btn_del"
                android:onClick="operationFunction"
                android:text="@string/button_del" />

        </LinearLayout>
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:text="@string/btn_four"
                android:id="@+id/btn_four"
                android:onClick="operationFunction"
                style="@style/button_style" />

            <Button
                style="@style/button_style"
                android:id="@+id/btn_five"
                android:onClick="operationFunction"
                android:text="@string/btn_five" />


            <Button
                style="@style/button_style"
                android:id="@+id/btn_six"
                android:onClick="operationFunction"
                android:text="@string/btn_six" />

            <Button
                style="@style/button_style"
                android:id="@+id/btn_plus"
                android:onClick="operationFunction"
                android:text="@string/btn_plus" />

        </LinearLayout>
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:text="@string/btn_seven"
                android:id="@+id/btn_seven"
                android:onClick="operationFunction"
                style="@style/button_style" />

            <Button
                style="@style/button_style"
                android:id="@+id/btn_eight"
                android:onClick="operationFunction"
                android:text="@string/btn_eight" />


            <Button
                style="@style/button_style"
                android:id="@+id/btn_nine"
                android:onClick="operationFunction"
                android:text="@string/btn_nine" />

            <Button
                style="@style/button_style"
                android:id="@+id/btn_minus"
                android:onClick="operationFunction"
                android:text="@string/btn_minus" />

        </LinearLayout>
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <Button
                android:text="@string/btn_c"
                android:id="@+id/btn_c"
                android:onClick="operationFunction"
                style="@style/button_style" />

            <Button
                style="@style/button_style"
                android:id="@+id/btn_zero"
                android:onClick="operationFunction"
                android:text="@string/btn_zero" />


            <Button
                style="@style/button_style"
                android:id="@+id/btn_dot"
                android:onClick="operationFunction"
                android:text="@string/btn_dot" />

            <Button
                style="@style/button_style"
                android:id="@+id/btn_equal"
                android:onClick="operationFunction"
                android:text="@string/btn_equal" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>